# vcenter-rce-2021-21972

./: Cargo.toml  README.md
src/: checkvuln.rs  main.rs
